--- a/22.12jsinside.html
+++ b/22.12jsinside.html
@@ -25,7 +25,7 @@
     <p> текст после заголовка 1</p>
     <p>после этого должен быть скрипт</p>
     <script>
-        alert('типо скрипт после заголовка')
+        alert('типо скрипт после после заголовка')
         
     </script>
     <div class="box2"></div>
