--- a/22.12jsoutside.html
+++ b/22.12jsoutside.html
@@ -22,13 +22,13 @@
     <div class="box"></div>
 
     <h1>заголовок 1</h1>
-    <p> текст после заголовка 1</p>
+    <p> текст после заголовкаа 1</p>
     <p>после этого должен быть скрипт</p>
     <script async src="Script1.js"></script>
     <div class="box2"></div>
-    <script>
+    <!--<script>
         alert('xyescript inside')
-    </script>
+    </script> -->
     <p>но есть ли скрипт?</p>
 
     <script async src="Script2.js"> </script>
