--- a/22.12jsinside.html
+++ b/22.12jsinside.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <p>текст текст текст</p>
+    <p>текст текирлоирлоишл текст</p>
     <div class="box"></div>
 
     <h1>заголовок 1</h1>
