--- a/22.12jsoutside.html
+++ b/22.12jsoutside.html
@@ -11,7 +11,7 @@
             height:100px;
         }
         .box2 {
-            background-color:green;
+            background-color:red;
             width:200px;
             height:150px;
         }
